--- a/Saleos/Views/Admin/Article.cshtml
+++ b/Saleos/Views/Admin/Article.cshtml
@@ -1,95 +1,97 @@
 @model List<Saleos.DTO.ArticleInfoDto>
 @{
-    ViewBag.Title = "title";
-    ViewData["ActiveData"] = "AdminArticle"; // see SideBarPage in Views/Shared/SideBarPage.cs
-    Layout = "_AdminLayout";
+  ViewBag.Title = "title";
+  ViewData["ActiveData"] = "AdminArticle"; // see SideBarPage in Views/Shared/SideBarPage.cs
+  Layout = "_AdminLayout";
 }
 
   <!-- Content Header (Page header) -->
   <div class="content-header">
-      <div class="container-fluid">
-          <div class="row mb-2">
-              <div class="col-sm-6">
-                  <h1 class="m-0">Article</h1>
-              </div><!-- /.col -->
-              <div class="col-sm-6">
-                  <ol class="breadcrumb float-sm-right">
-                      <li class="breadcrumb-item"><a asp-action="Article">Home</a></li>
-                      <li class="breadcrumb-item active">Article</li>
-                  </ol>
-              </div><!-- /.col -->
-          </div><!-- /.row -->
-      </div><!-- /.container-fluid -->
+    <div class="container-fluid">
+      <div class="row mb-2">
+        <div class="col-sm-6">
+          <h1 class="m-0">Article</h1>
+        </div><!-- /.col -->
+        <div class="col-sm-6">
+          <ol class="breadcrumb float-sm-right">
+            <li class="breadcrumb-item"><a asp-action="Article">Home</a></li>
+            <li class="breadcrumb-item active">Article</li>
+          </ol>
+        </div><!-- /.col -->
+      </div><!-- /.row -->
+    </div><!-- /.container-fluid -->
   </div>
   <!-- /.content-header -->
 
   <!-- Main content -->
   <div class="content">
-      <div class="container-fluid">
-          <div class="row" style="margin-bottom: 10px;">
-              <div class="col">
-                  <a asp-action="Editor" asp-route-articleId="0" type="button" class="btn btn-outline-primary btn-sm">新建</a>
-              </div>
-          </div>
+    <div class="container-fluid">
+      <div class="row" style="margin-bottom: 10px;">
+        <div class="col">
+          <a asp-action="Editor" asp-route-articleId="0" 
+             type="button" class="btn btn-outline-primary btn-sm">新建</a>
+        </div>
+      </div>
 
-          <div class="row">
-              <div class="col">
-                  <div class="card">
-                      <div class="card-body table-responsive p-0">
-                          <table class="table table-striped table-valign-middle">
-                              <thead>
-                                  <tr>
-                                      <th>ID</th>
-                                      <th>Title</th>
-                                      <th>CreateTime</th>
-                                      <th>LastModifiedTime</th>
-                                      <th>Operator</th>
-                                  </tr>
-                              </thead>
-                              <tbody>
-                              @foreach (var articleInfo in Model)
-                              {
-                                  <tr>
-                                      <td>@articleInfo.Id</td>
-                                      <td>@articleInfo.Title</td>
-                                      <td>@articleInfo.CreateTime</td>
-                                      <td>@articleInfo.LastModifiedTime</td>
-                                      <td>
-                                          <a asp-action="Editor" asp-route-articleId="@articleInfo.Id" type="button" class="btn btn-outline-primary btn-sm">修改</a>
-                                          <button type="button" class="btn btn-outline-danger btn-sm">删除</button>
-                                      </td>
-                                  </tr>
-                              }
-                              </tbody>
-                          </table>
-                      </div>
-                  </div>
-              </div>
+      <div class="row">
+        <div class="col">
+          <div class="card">
+            <div class="card-body table-responsive p-0">
+              <table class="table table-striped table-valign-middle">
+                <thead>
+                  <tr>
+                    <th>ID</th>
+                    <th>Title</th>
+                    <th>CreateTime</th>
+                    <th>LastModifiedTime</th>
+                    <th>Operator</th>
+                  </tr>
+                </thead>
+                <tbody>
+                @foreach (var articleInfo in Model)
+                {
+                  <tr>
+                    <td>@articleInfo.Id</td>
+                    <td>@articleInfo.Title</td>
+                    <td>@articleInfo.CreateTime</td>
+                    <td>@articleInfo.LastModifiedTime</td>
+                    <td>
+                      <a asp-action="Editor" asp-route-articleId="@articleInfo.Id"
+                         type="button" class="btn btn-outline-primary btn-sm">修改</a>
+                      <button type="button" class="btn btn-outline-danger btn-sm">删除</button>
+                    </td>
+                  </tr>
+                }
+                </tbody>
+              </table>
+            </div>
           </div>
-          <!-- /.row -->
+        </div>
+      </div>
+      <!-- /.row -->
 
-          <div class="row">
-              <div class="col" style="display:flex; flex-direction:row-reverse;">
-                  <nav aria-label="Page navigation example">
-                      <ul class="pagination">
-                          <li class="page-item">
-                          <a class="page-link" href="#" aria-label="Previous">
-                              <span aria-hidden="true">&laquo;</span>
-                          </a>
-                          </li>
-                          <li class="page-item"><a class="page-link" href="#">1</a></li>
-                          <li class="page-item"><a class="page-link" href="#">2</a></li>
-                          <li class="page-item"><a class="page-link" href="#">3</a></li>
-                          <li class="page-item">
-                          <a class="page-link" href="#" aria-label="Next">
-                              <span aria-hidden="true">&raquo;</span>
-                          </a>
-                          </li>
-                      </ul>
-                  </nav>
-              </div>
-          </div>
+      <div class="row">
+        <div class="col" style="display:flex; flex-direction:row-reverse;">
+          <nav aria-label="Page navigation example">
+            <ul class="pagination">
+              <li class="page-item">
+              <a class="page-link" href="#" aria-label="Previous">
+                <span aria-hidden="true">&laquo;</span>
+              </a>
+              </li>
+              <li class="page-item"><a class="page-link" href="#">1</a></li>
+              <li class="page-item"><a class="page-link" href="#">2</a></li>
+              <li class="page-item"><a class="page-link" href="#">3</a></li>
+              <li class="page-item">
+              <a class="page-link" href="#" aria-label="Next">
+                <span aria-hidden="true">&raquo;</span>
+              </a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+      </div>
 
-      </div><!-- /.container-fluid -->
+    </div><!-- /.container-fluid -->
   </div>
   <!-- /.content -->
