--- a/Saleos/Views/Admin/Tags.cshtml
+++ b/Saleos/Views/Admin/Tags.cshtml
@@ -1,170 +1,170 @@
 @model TagPageViewModel
 @{
-    ViewBag.Title = "title";
-    ViewData["ActiveData"] = "AdminTags"; // see SideBarPage in Views/Shared/SideBarPage.cs
-    Layout = "_AdminLayout";
+  ViewBag.Title = "title";
+  ViewData["ActiveData"] = "AdminTags"; // see SideBarPage in Views/Shared/SideBarPage.cs
+  Layout = "_AdminLayout";
 }
 
 @section Modal
 {
-    <div class="modal" tabindex="-1" role="dialog" id="TagModal">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title">Tag Content</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    <input type="text" class="form-control" placeholder="Tag" />
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-primary" id="tag-submit">Save changes</button>
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                </div>
-            </div>
+  <div class="modal" tabindex="-1" role="dialog" id="TagModal">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Tag Content</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
         </div>
+        <div class="modal-body">
+          <input type="text" class="form-control" placeholder="Tag" />
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-primary" id="tag-submit">Save changes</button>
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        </div>
+      </div>
     </div>
+  </div>
 }
 
 <!-- Content Header (Page header) -->
 <div class="content-header">
-    <div class="container-fluid">
-        <div class="row mb-2">
-            <div class="col-sm-6">
-                <h1 class="m-0">Tags</h1>
-            </div><!-- /.col -->
-            <div class="col-sm-6">
-                <ol class="breadcrumb float-sm-right">
-                    <li class="breadcrumb-item"><a asp-action="Article">Home</a></li>
-                    <li class="breadcrumb-item active">Tags</li>
-                </ol>
-            </div><!-- /.col -->
-        </div><!-- /.row -->
-    </div><!-- /.container-fluid -->
+  <div class="container-fluid">
+    <div class="row mb-2">
+      <div class="col-sm-6">
+        <h1 class="m-0">Tags</h1>
+      </div><!-- /.col -->
+      <div class="col-sm-6">
+        <ol class="breadcrumb float-sm-right">
+          <li class="breadcrumb-item"><a asp-action="Article">Home</a></li>
+          <li class="breadcrumb-item active">Tags</li>
+        </ol>
+      </div><!-- /.col -->
+    </div><!-- /.row -->
+  </div><!-- /.container-fluid -->
 </div>
 <!-- /.content-header -->
 
 <!-- Main content -->
 <div class="content">
-    <div class="container-fluid">
-        <div class="row" style="margin-bottom: 10px;">
-            <div class="col">
-                <button class="btn btn-outline-primary btn-sm" id="add-new-tag"
-                        data-toggle="modal" data-target="#TagModal">新建</button>
-            </div>
-        </div>
+  <div class="container-fluid">
+    <div class="row" style="margin-bottom: 10px;">
+      <div class="col">
+        <button class="btn btn-outline-primary btn-sm" id="add-new-tag"
+            data-toggle="modal" data-target="#TagModal">新建</button>
+      </div>
+    </div>
 
-        <div class="row">
-            <div class="col">
-                <div class="card">
-                    <div class="card-body table-responsive p-0">
-                        <table class="table table-striped table-valign-middle">
-                            <thead>
-                                <tr>
-                                    <th>ID</th>
-                                    <th>Content</th>
-                                    <th>Operator</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                            @foreach (var tag in Model.Tags)
-                            {
-                                <tr>
-                                    <td class="tag-id">@tag.Id</td>
-                                    <td class="tag-content">@tag.Content</td>
-                                    <td>
-                                        <button type="button" class="btn btn-outline-primary btn-sm modify-tag-button"
-                                                data-toggle="modal" data-target='#TagModal'>修改</button>
-                                        <button class="btn btn-outline-danger btn-sm delete-tag-button"
-                                                type="button">删除</button>
-                                    </td>
-                                </tr>
-                            }
-                            </tbody>
-                        </table>
-                    </div>
-                </div>
-            </div>
+    <div class="row">
+      <div class="col">
+        <div class="card">
+          <div class="card-body table-responsive p-0">
+            <table class="table table-striped table-valign-middle">
+              <thead>
+                <tr>
+                  <th>ID</th>
+                  <th>Content</th>
+                  <th>Operator</th>
+                </tr>
+              </thead>
+              <tbody>
+              @foreach (var tag in Model.Tags)
+              {
+                <tr>
+                  <td class="tag-id">@tag.Id</td>
+                  <td class="tag-content">@tag.Content</td>
+                  <td>
+                    <button type="button" class="btn btn-outline-primary btn-sm modify-tag-button"
+                        data-toggle="modal" data-target='#TagModal'>修改</button>
+                    <button class="btn btn-outline-danger btn-sm delete-tag-button"
+                        type="button">删除</button>
+                  </td>
+                </tr>
+              }
+              </tbody>
+            </table>
+          </div>
         </div>
-        <!-- /.row -->
+      </div>
+    </div>
+    <!-- /.row -->
 
-        <div class="row">
-            <div class="col" style="display:flex; flex-direction:row-reverse;">
-                <nav aria-label="Page navigation example">
-                    <ul class="pagination">
-                        <li class="page-item">
-                        <a class="page-link" href="#" aria-label="Previous">
-                            <span aria-hidden="true">&laquo;</span>
-                        </a>
-                        </li>
-                        <li class="page-item"><a class="page-link" href="#">1</a></li>
-                        <li class="page-item"><a class="page-link" href="#">2</a></li>
-                        <li class="page-item"><a class="page-link" href="#">3</a></li>
-                        <li class="page-item">
-                        <a class="page-link" href="#" aria-label="Next">
-                            <span aria-hidden="true">&raquo;</span>
-                        </a>
-                        </li>
-                    </ul>
-                </nav>
-            </div>
-        </div>
+    <div class="row">
+      <div class="col" style="display:flex; flex-direction:row-reverse;">
+        <nav aria-label="Page navigation example">
+          <ul class="pagination">
+            <li class="page-item">
+            <a class="page-link" href="#" aria-label="Previous">
+              <span aria-hidden="true">&laquo;</span>
+            </a>
+            </li>
+            <li class="page-item"><a class="page-link" href="#">1</a></li>
+            <li class="page-item"><a class="page-link" href="#">2</a></li>
+            <li class="page-item"><a class="page-link" href="#">3</a></li>
+            <li class="page-item">
+            <a class="page-link" href="#" aria-label="Next">
+              <span aria-hidden="true">&raquo;</span>
+            </a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </div>
 
-    </div><!-- /.container-fluid -->
+  </div><!-- /.container-fluid -->
 </div>
 <!-- /.content -->
 
 @section CustomScript
 {
-    <script type="text/javascript">
-        let SelectedTagId = 0 // the tag's id that be selected. if the value is 0, that means the tag is new
-        $('#TagModal').on('hidden', function (){
-            SelectedTagId = 0
-        })
-        
-        $('.modify-tag-button').click(function() {
-            let id = $(this).parent().siblings('.tag-id').text()
-            let content = $(this).parent().siblings('.tag-content').text()
-            $('.modal-body > input').val(content)
-            SelectedTagId = id
-        })
-        
-        $('.delete-tag-button').click(function () {
-            let id = $(this).parent().siblings('.tag-id').text()
-            $.ajax({
-                url: '@Url.Action("Tags", "Admin")' + '/' + id,
-                type: 'DELETE',
-                success: function() {
-                    location.reload()
-                },
-                error: function () {
-                    alert('Not Found')
-                }
-            })
-        })
-        
-        $('#add-new-tag').click(function () {
-            $('.modal-body > input').val(null)
-            SelectedTagId = 0
-        })
-        
-        $('#tag-submit').click(function (){
-            $.ajax({
-                url: '@Url.Action("AddOrUpdateTags", "Admin")',
-                type: 'POST',
-                contentType: 'application/json; charset=utf-8',
-                dateType: 'json',
-                data: JSON.stringify({
-                    id: SelectedTagId,
-                    content: $('.modal-body > input').val()
-                }),
-                success: function(result) {
-                    $('#TagModal').modal('hide')
-                    location.reload()
-                }
-            })
-        })
-    </script>
+  <script type="text/javascript">
+    let SelectedTagId = 0 // if the value is 0, that means the tag is new
+    $('#TagModal').on('hidden', function (){
+      SelectedTagId = 0
+    })
+    
+    $('.modify-tag-button').click(function() {
+      let id = $(this).parent().siblings('.tag-id').text()
+      let content = $(this).parent().siblings('.tag-content').text()
+      $('.modal-body > input').val(content)
+      SelectedTagId = id
+    })
+    
+    $('.delete-tag-button').click(function () {
+      let id = $(this).parent().siblings('.tag-id').text()
+      $.ajax({
+        url: '@Url.Action("Tags", "Admin")' + '/' + id,
+        type: 'DELETE',
+        success: function() {
+          location.reload()
+        },
+        error: function () {
+          alert('Not Found')
+        }
+      })
+    })
+    
+    $('#add-new-tag').click(function () {
+      $('.modal-body > input').val(null)
+      SelectedTagId = 0
+    })
+    
+    $('#tag-submit').click(function (){
+      $.ajax({
+        url: '@Url.Action("AddOrUpdateTags", "Admin")',
+        type: 'POST',
+        contentType: 'application/json; charset=utf-8',
+        dateType: 'json',
+        data: JSON.stringify({
+          id: SelectedTagId,
+          content: $('.modal-body > input').val()
+        }),
+        success: function(result) {
+          $('#TagModal').modal('hide')
+          location.reload()
+        }
+      })
+    })
+  </script>
 }
