--- a/Saleos/Views/Shared/_AdminLayout.cshtml
+++ b/Saleos/Views/Shared/_AdminLayout.cshtml
@@ -2,70 +2,72 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>AdminLTE 3 | Starter</title>
-    <!-- Font Awesome Icons -->
-    <link href="https://cdn.bootcdn.net/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
-    <!-- Theme style -->
-    <link href="https://cdn.bootcdn.net/ajax/libs/admin-lte/3.1.0/css/adminlte.min.css" rel="stylesheet">
-    @RenderSection("ExternalCss", required: false)
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>AdminLTE 3 | Starter</title>
+  <!-- Font Awesome Icons -->
+  <link href="https://cdn.bootcdn.net/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
+  <!-- Theme style -->
+  <link href="https://cdn.bootcdn.net/ajax/libs/admin-lte/3.1.0/css/adminlte.min.css" rel="stylesheet">
+  @RenderSection("ExternalCss", required: false)
 </head>
 
 <body class="hold-transition sidebar-mini">
 @RenderSection("Modal", required:false)
 <div class="wrapper">
-    <!-- Navbar -->
-    <nav class="main-header navbar navbar-expand navbar-white navbar-light">
-        <!-- Left navbar links -->
-        <ul class="navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
-            </li>
-        </ul>
+  <!-- Navbar -->
+  <nav class="main-header navbar navbar-expand navbar-white navbar-light">
+    <!-- Left navbar links -->
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link" data-widget="pushmenu" href="#" role="button">
+          <i class="fas fa-bars"></i>
+        </a>
+      </li>
+    </ul>
 
-        <!-- Right navbar links -->
-        <ul class="navbar-nav ml-auto">
-            <!-- Navbar Search -->
-            <li class="nav-item">
-                <a class="nav-link" asp-action="Logout" asp-controller="Login" role="button">
-                    <i class="fas fa-sign-out-alt"></i>
-                    <span>登出</span>
-                </a>
-            </li>
-        </ul>
-    </nav>
-    <!-- /.navbar -->
+    <!-- Right navbar links -->
+    <ul class="navbar-nav ml-auto">
+      <!-- Navbar Search -->
+      <li class="nav-item">
+        <a class="nav-link" asp-action="Logout" asp-controller="Login" role="button">
+          <i class="fas fa-sign-out-alt"></i>
+          <span>登出</span>
+        </a>
+      </li>
+    </ul>
+  </nav>
+  <!-- /.navbar -->
 
-    <!-- Main Sidebar Container -->
-    @await Html.PartialAsync("_SideBarPartial")
+  <!-- Main Sidebar Container -->
+  @await Html.PartialAsync("_SideBarPartial")
 
-    <!-- Content Wrapper. Contains page content -->
-    <div class="content-wrapper">
-        @RenderBody()
+  <!-- Content Wrapper. Contains page content -->
+  <div class="content-wrapper">
+    @RenderBody()
+  </div>
+  <!-- /.content-wrapper -->
+  
+  <!-- Control Sidebar -->
+  <aside class="control-sidebar control-sidebar-dark">
+    <!-- Control sidebar content goes here -->
+    <div class="p-3">
+      <h5>Title</h5>
+      <p>Sidebar content</p>
     </div>
-    <!-- /.content-wrapper -->
-    
-    <!-- Control Sidebar -->
-    <aside class="control-sidebar control-sidebar-dark">
-        <!-- Control sidebar content goes here -->
-        <div class="p-3">
-            <h5>Title</h5>
-            <p>Sidebar content</p>
-        </div>
-    </aside>
-    <!-- /.control-sidebar -->
+  </aside>
+  <!-- /.control-sidebar -->
 
-    <!-- Main Footer -->
-    <footer class="main-footer">
-        <!-- To the right -->
-        <div class="float-right d-none d-sm-inline">
-            Anything you want
-        </div>
-        <!-- Default to the left -->
-        <strong>Copyright &copy; 2014-2021 <a href="https://adminlte.io">AdminLTE.io</a>.</strong> All rights
-        reserved.
-    </footer>
+  <!-- Main Footer -->
+  <footer class="main-footer">
+    <!-- To the right -->
+    <div class="float-right d-none d-sm-inline">
+      Anything you want
+    </div>
+    <!-- Default to the left -->
+    <strong>Copyright &copy; 2014-2021 <a href="https://adminlte.io">AdminLTE.io</a>.</strong> All rights
+    reserved.
+  </footer>
 </div>
 <!-- ./wrapper -->
 
