--- a/Saleos/Views/Admin/Editor.cshtml
+++ b/Saleos/Views/Admin/Editor.cshtml
@@ -92,7 +92,7 @@
 
 @section ExternalScript {
   <!-- Bootstrap-select -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.14.0-beta2/dist/js/bootstrap-select.min.js"/>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.14.0-beta2/dist/js/bootstrap-select.min.js"></script>
   <!-- Vditor -->
   <script src="https://cdn.jsdelivr.net/npm/vditor/dist/index.min.js"></script>
   <script src="@Url.Content("~/js/vditor.js")"></script>
