--- a/Saleos/Views/Home/Index.cshtml
+++ b/Saleos/Views/Home/Index.cshtml
@@ -29,7 +29,7 @@
           }
         </div>
         <div class="read-whole-article">
-          <a href="./ArticleDisplay.html">
+          <a asp-action="Article">
             阅读全文
             <i class="bi bi-arrow-right-circle-fill" style="margin-left: 5px"></i>
           </a>
