--- a/Saleos/Views/Admin/Category.cshtml
+++ b/Saleos/Views/Admin/Category.cshtml
@@ -1,4 +1,5 @@
 @model CategoryPageViewModel
+@using Saleos.Views.Shared
 @{
   ViewBag.Title = "title";
   ViewData["ActiveData"] = "AdminCategory"; // see SideBarPage in Views/Shared/SideBarPage.cs
@@ -95,18 +96,41 @@
       <div class="col" style="display:flex; flex-direction:row-reverse;">
         <nav aria-label="Page navigation example">
           <ul class="pagination">
-            <li class="page-item">
-            <a class="page-link" href="#" aria-label="Previous">
-              <span aria-hidden="true">&laquo;</span>
-            </a>
+            <li class="page-item @Pagination.Disabled(Model.CurrentPage - 1, Model.MaxPage)">
+              <a class="page-link" asp-action="Category" asp-route-page="@(Model.CurrentPage - 1)"
+                aria-label="Previous">
+                <span aria-hidden="true">&laquo;</span>
+              </a>
             </li>
-            <li class="page-item"><a class="page-link" href="#">1</a></li>
-            <li class="page-item"><a class="page-link" href="#">2</a></li>
-            <li class="page-item"><a class="page-link" href="#">3</a></li>
+            @if(Model.CurrentPage > 1)
+            {
+              <li class="page-item">
+                <a class="page-link" asp-action="Category"
+                  asp-route-page="@(Model.CurrentPage - 1)">
+                  @(Model.CurrentPage - 1)
+                </a>
+              </li>
+            }
             <li class="page-item">
-            <a class="page-link" href="#" aria-label="Next">
-              <span aria-hidden="true">&raquo;</span>
-            </a>
+              <a class="page-link" asp-action="Category"
+                asp-route-page="@Model.CurrentPage">
+                @Model.CurrentPage
+              </a>
+            </li>
+            @if(Model.CurrentPage + 1 <= Model.MaxPage)
+            {
+              <li class="page-item">
+                <a class="page-link" asp-action="Category"
+                  asp-route-page="@(Model.CurrentPage + 1)">
+                  @(Model.CurrentPage + 1)
+                </a>
+              </li>
+            }
+            <li class="page-item @Pagination.Disabled(Model.CurrentPage + 1, Model.MaxPage)">
+              <a class="page-link" asp-action="Category"
+                asp-route-page="@(Model.CurrentPage + 1)" aria-label="Next">
+                <span aria-hidden="true">&raquo;</span>
+              </a>
             </li>
           </ul>
         </nav>
