--- a/Saleos/Views/Home/Index.cshtml
+++ b/Saleos/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@model HomeIndexViewModel
+@using Saleos.Views.Shared
 
 @{
   ViewData["Title"] = "Home Page";
@@ -42,28 +43,35 @@
   <div class="col" style="display: flex; flex-direction: row-reverse;">
     <nav aria-label="Page navigation example">
       <ul class="pagination">
-        <li class="page-item">
-          <a class="page-link" href="#" aria-label="Previous">
+        <li class="page-item @Pagination.Disabled(@Model.CurrentPage - 1, @Model.MaxPage)">
+          <a class="page-link" aria-label="Previous"
+            asp-action="Index" asp-route-page="@(Model.CurrentPage - 1)">
             <span aria-hidden="true">&laquo;</span>
             <span class="sr-only">Previous</span>
           </a>
         </li>
-        @if(@Model.currentPage > 1)
+        @if(@Model.CurrentPage > 1)
         {
-          <li class="page-item"><a class="page-link" href="#">@(Model.currentPage-1)</a></li>
+          <li class="page-item">
+            <a class="page-link" href="#">@(Model.CurrentPage-1)</a>
+          </li>
         }
         <li class="page-item">
-          <a class="page-link active" asp-action="Index" asp-route-page="@Model.currentPage">
-            @Model.currentPage
+          <a class="page-link active" asp-action="Index" asp-route-page="@Model.CurrentPage">
+            @Model.CurrentPage
           </a>
         </li>
-        <li class="page-item">
-          <a class="page-link" asp-action="Index" asp-route-page="@(Model.currentPage+1)">
-            @(Model.currentPage+1)
-          </a>
-        </li>
-        <li class="page-item">
-          <a class="page-link" href="#" aria-label="Next">
+        @if(@Model.CurrentPage + 1 <= @Model.MaxPage)
+        {
+          <li class="page-item">
+            <a class="page-link" asp-action="Index" asp-route-page="@(Model.CurrentPage+1)">
+              @(Model.CurrentPage+1)
+            </a>
+          </li>
+        }
+        <li class="page-item @Pagination.Disabled(@Model.CurrentPage + 1, @Model.MaxPage)">
+          <a class="page-link" asp-action="Index" asp-route-page="@(Model.CurrentPage + 1)"
+            aria-label="Next" aria-disabled="@(Model.CurrentPage == Model.MaxPage)">
             <span aria-hidden="true">&raquo;</span>
             <span class="sr-only">Next</span>
           </a>
