--- a/Saleos/Views/Home/Index.cshtml
+++ b/Saleos/Views/Home/Index.cshtml
@@ -53,7 +53,9 @@
         @if(@Model.CurrentPage > 1)
         {
           <li class="page-item">
-            <a class="page-link" href="#">@(Model.CurrentPage-1)</a>
+            <a class="page-link" asp-action="Index" asp-route-page="@(Model.CurrentPage-1)">
+              @(Model.CurrentPage-1)
+            </a>
           </li>
         }
         <li class="page-item">
