feat: add update article infomation page
add update article infomation page

--- a/Saleos/Views/Home/Index.cshtml
+++ b/Saleos/Views/Home/Index.cshtml
@@ -10,7 +10,7 @@
   <div class="home-article-info" style="margin-bottom: 10px">
       <div class="article-main-info">
         <div class="article-img">
-          <img src="./img/thumb_1.webp" alt=""/>
+          <img src="@(articleInfoDAO.ImgUrl)" alt=""/>
         </div>
         <div class="article-info-content">
           <h2>@articleInfoDAO.Title</h2>
