--- a/Saleos/Views/Shared/_SideBarPartial.cshtml
+++ b/Saleos/Views/Shared/_SideBarPartial.cshtml
@@ -4,15 +4,16 @@
 <aside class="main-sidebar sidebar-dark-primary elevation-4">
   <!-- Brand Logo -->
   <a href="#" class="brand-link">
-    <img src="@Url.Content("~/img/AdminLTELogo.png")" alt="AdminLTE Logo" class="brand-image img-circle elevation-3"
-      style="opacity: .8">
+    <img src="@Url.Content("~/img/AdminLTELogo.png")" alt="AdminLTE Logo"
+      class="brand-image img-circle elevation-3" style="opacity: .8">
     <span class="brand-text font-weight-light">AdminLTE 3</span>
   </a>
   <div class="sidebar">
     <!-- Sidebar user panel (optional) -->
     <div class="user-panel mt-3 pb-3 mb-3 d-flex">
       <div class="image">
-        <img src="@Url.Content("~/img/user2-160x160.jpg")" class="img-circle elevation-2" alt="User Image">
+        <img src="@Url.Content("~/img/user2-160x160.jpg")"
+          class="img-circle elevation-2" alt="User Image">
       </div>
       <div class="info">
         <a href="#" class="d-block">Alexander Pierce</a>
@@ -24,19 +25,29 @@
       <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu"
         data-accordion="false">
         <li class="nav-item">
-          <a asp-controller="Admin" asp-action="Article" class="nav-link @SideBarPage.AdminArticleNavClass(ViewContext)">
+          <a asp-controller="Admin" asp-action="Article"
+            class="nav-link @SideBarPage.AdminArticleNavClass(ViewContext)">
             <i class="nav-icon fas fa-th"></i>
             <p>Article</p>
           </a>
         </li>
         <li class="nav-item">
-          <a asp-controller="Admin" asp-action="Tags" class="nav-link @SideBarPage.AdminTagsNavClass(ViewContext)">
+          <a asp-controller="Admin" asp-action="ArticleInfo"
+            class="nav-link @SideBarPage.AdminArticleInfoNavClass(ViewContext)">
+              <i class="nav-icon fas fa-tv"></i>
+              <p>Article Info Display</p>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a asp-controller="Admin" asp-action="Tags"
+            class="nav-link @SideBarPage.AdminTagsNavClass(ViewContext)">
             <i class="nav-icon fas fa-tags"></i>
             <p>Tags</p>
           </a>
         </li>
         <li class="nav-item">
-          <a asp-controller="Admin" asp-action="Category" class="nav-link @SideBarPage.AdminCategoryNavClass(ViewContext)">
+          <a asp-controller="Admin" asp-action="Category"
+            class="nav-link @SideBarPage.AdminCategoryNavClass(ViewContext)">
             <i class="nav-icon fas fa-bookmark"></i>
             <p>Category</p>
           </a>
